--- a/weatherProject/src/App.css
+++ b/weatherProject/src/App.css
@@ -42,7 +42,7 @@ body .container .main {
 }
 body .container .main .firstSection {
   width: 15%;
-  height: 95%;
+  height: 44vw;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -59,19 +59,19 @@ body .container .main .firstSection .selectTime {
   padding: 20px;
 }
 body .container .main .firstSection .selectTime .selectValuebox {
-  width: 100px;
+  width: 5vw;
   display: flex;
   text-align: center;
   margin: auto;
 }
 body .container .main .firstSection .selectTime .selectValuebox .selectValue {
   text-align: right;
-  width: 100px;
+  width: 5vw;
   border-radius: 30px;
 }
 body .container .main .firstSection .realtimeWeatherArea {
   width: 100%;
-  height: 45%;
+  height: 20.5vw;
   margin: 0 auto;
   background-color: #fff;
   border-radius: 20px;
@@ -80,7 +80,8 @@ body .container .main .firstSection .realtimeWeatherArea {
   box-sizing: border-box;
 }
 body .container .main .firstSection .realtimeWeatherArea .realtimeWeather {
-  font-size: 14px;
+  height: 100%;
+  font-size: 1.4vw;
 }
 body .container .main .firstSection .realtimeWeatherArea .realtimeWeather h2 {
   font-family: "Nanum Gothic", serif;
@@ -89,25 +90,32 @@ body .container .main .firstSection .realtimeWeatherArea .realtimeWeather h2 {
   text-align: center;
 }
 body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul {
+  width: 10vw;
+  height: 100%;
+  margin: auto;
   list-style: none;
-  margin-top: 20px;
+  margin-top: 2vh;
 }
 body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .icon {
-  width: 60%;
-  height: 7vw;
-  margin: auto;
+  width: 8vw;
+  height: 40%;
+  margin: 0 auto;
   background-image: url(./assets/img/sunny.png);
-  background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .temperature {
   text-align: center;
   font-size: 2.2vw;
+  font-weight: bold;
+  text-shadow: 7px 7px 20px #1C1B20;
+  margin-top: -2vw;
 }
 body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info {
-  margin-top: 0.7vw;
+  margin-top: 2vw;
   width: 100%;
-  height: 5.5vw;
+  height: 5.5vh;
   display: flex;
   justify-content: space-between;
   text-align: center;
@@ -119,47 +127,83 @@ body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .we
   font-size: 0.7vw;
 }
 body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .windIcon {
-  width: 40px;
+  width: 4vh;
   height: 2vw;
   display: block;
   margin: auto;
   background-image: url(./assets/img/Wind.png);
-  background-size: contain;
-  background-repeat: no-repeat;
   background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .humidityIcon {
-  width: 40px;
+  width: 4vh;
   height: 2vw;
   display: block;
   margin: auto;
   background-image: url(./assets/img/Dew.png);
-  background-size: contain;
-  background-repeat: no-repeat;
   background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .VisibilityIcon {
-  width: 40px;
+  width: 4vh;
   height: 2vw;
   display: block;
   margin: auto;
   background-image: url(./assets/img/Rain2.png);
-  background-size: contain;
-  background-repeat: no-repeat;
   background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-body .container .main .firstSection .a1 {
+body .container .main .firstSection .perceived {
   width: 100%;
   height: 30%;
   margin: 0 auto;
+  border-radius: 20px;
   background-color: #fff;
-  border-radius: 20px;
-  background-color: #303136;
-  border-radius: 20px;
+  background: linear-gradient(#ccc8bd, #ffab04, #ff8604);
+  box-sizing: border-box;
+  padding: 2vw;
+}
+body .container .main .firstSection .perceived .thermometerIconbox {
+  display: flex;
+  width: 100%;
+  height: 12vh;
+}
+body .container .main .firstSection .perceived .thermometerIconbox .thermometerIcon {
+  width: 5vw;
+  height: 10vh;
+  background-image: url(./assets/img/ThermometerQuarter.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+body .container .main .firstSection .perceived .thermometerIconbox div {
+  text-align: center;
+  font-size: 1vw;
+  font-weight: bold;
+}
+body .container .main .firstSection .perceived .thermometerIconbox div p {
+  margin-top: 1vw;
+  font-size: 1.1vw;
+  font-weight: bold;
+}
+body .container .main .firstSection .perceived .suggestion {
+  text-align: center;
+}
+body .container .main .firstSection .perceived .suggestion .suggestionT {
+  font-size: 1vw;
+  font-weight: bold;
+  margin-top: -0.5vh;
+  margin-bottom: 1vh;
+}
+body .container .main .firstSection .perceived .suggestion .suggestionM {
+  font-size: 0.7vw;
 }
 body .container .main .secondSection {
   width: 40%;
-  height: 95%;
+  height: 44vw;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -172,7 +216,15 @@ body .container .main .secondSection .b1 {
   border-radius: 20px;
   background-color: #1C1B20;
   overflow: hidden;
+  position: relative;
   opacity: 90%;
+}
+body .container .main .secondSection .b1 .mapSelect {
+  position: absolute;
+  text-align: center;
+  width: 84px;
+  height: 20px;
+  border-radius: 30px;
 }
 body .container .main .secondSection .b1 .map {
   width: 25vw;
@@ -195,7 +247,7 @@ body .container .main .secondSection .b2 {
 }
 body .container .main .thirdSection {
   width: 45%;
-  height: 95%;
+  height: 44vw;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -246,11 +298,20 @@ body .container .main .thirdSection .c1 {
   border-radius: 20px;
   padding: 30px;
   box-sizing: border-box;
+  position: relative;
+}
+body .container .main .thirdSection .c1 p {
+  font-size: 1vw;
+  position: absolute;
+  top: 1.2vw;
 }
 body .container .main .thirdSection .c1 .canvas {
+  position: absolute;
+  top: 2vw;
   border-radius: 20px;
   margin: auto;
   display: block;
+  width: 35vw;
 }
 body .container .main .thirdSection .c2 {
   width: 100%;
@@ -259,117 +320,6 @@ body .container .main .thirdSection .c2 {
   border-radius: 20px;
 }
 
-@media (max-width: 1280px) {
-  body {
-    margin: 0 auto;
-    width: 100vw;
-    display: block;
-    background-color: #fff;
-    background-image: url();
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  body .container {
-    margin: 0 auto;
-    height: 100vh;
-    width: 90vw;
-  }
-  body .container .header {
-    width: 100%;
-    height: 60px;
-    background-color: #fff;
-    background-color: #303136;
-    border-radius: 20px;
-  }
-  body .container .header p {
-    font-size: 25px;
-    font-style: bold;
-    line-height: 60px;
-    margin-left: 50px;
-  }
-  body .container .main {
-    width: 100%;
-    height: calc(100% - 60px);
-    display: flex;
-  }
-  body .container .main .firstSection {
-    width: 20%;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-  }
-  body .container .main .firstSection .a1 {
-    width: 100%;
-    height: 30%;
-    margin: 0 auto;
-    background-color: #fff;
-    border-radius: 20px;
-    background-color: #303136;
-    border-radius: 20px;
-  }
-  body .container .main .firstSection .a {
-    width: 100%;
-    height: 30%;
-    margin: 0 auto;
-    background-color: #fff;
-    border-radius: 20px;
-    background-color: #303136;
-    border-radius: 20px;
-  }
-  body .container .main .secondSection {
-    width: 40%;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-  }
-  body .container .main .secondSection .b1 {
-    width: 90%;
-    height: 63%;
-    margin: 0 auto;
-    background-color: #303136;
-    border-radius: 20px;
-  }
-  body .container .main .secondSection .b2 {
-    width: 90%;
-    margin: 0 auto;
-    background-color: #303136;
-    border-radius: 20px;
-    height: 30%;
-  }
-  body .container .main .thirdSection {
-    width: 45%;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-  }
-  body .container .main .thirdSection .c {
-    width: 100%;
-    height: 20%;
-    display: flex;
-    justify-content: space-between;
-  }
-  body .container .main .thirdSection .c .c2-1 {
-    width: 32%;
-    background-color: black;
-    background-color: #303136;
-    border-radius: 20px;
-  }
-  body .container .main .thirdSection .c1 {
-    width: 100%;
-    height: 40%;
-    background-color: #303136;
-    border-radius: 20px;
-  }
-  body .container .main .thirdSection .c2 {
-    width: 100%;
-    height: 30%;
-    background-color: #303136;
-    border-radius: 20px;
-  }
-}
 @media (max-width: 720px) {
   .container {
     margin: 0 auto;
