--- a/weatherProject/src/App.scss
+++ b/weatherProject/src/App.scss
@@ -11,6 +11,12 @@
     color: white;
 }
 
+@mixin backgoundSet() {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 @mixin objcolor() {
     background-color: #303136;
     border-radius: 20px;
@@ -64,7 +70,7 @@ body {
 
             .firstSection {
                 width: 15%;
-                height: 95%;
+                height: 44vw;
                 display: flex;
                 flex-wrap: wrap;
                 align-items: center;
@@ -80,17 +86,16 @@ body {
                     padding: 20px;
 
                     .selectValuebox {
-                        width: 100px;
+                        width: 5vw;
                         display: flex;
                         text-align: center;
                         margin: auto;
 
                         .selectValue {
                             text-align: right;
-                            width: 100px;
+                            width: 5vw;
+
                             border-radius: 30px;
-
-
                         }
                     }
 
@@ -99,7 +104,7 @@ body {
 
                 .realtimeWeatherArea {
                     width: 100%;
-                    height: 45%;
+                    height: 20.5vw;
                     margin: 0 auto;
                     background-color: #fff;
                     border-radius: 20px;
@@ -107,10 +112,10 @@ body {
                     padding: 20px;
                     box-sizing: border-box;
 
-
-
                     .realtimeWeather {
-                        font-size: 14px;
+                        height: 100%;
+
+                        font-size: 1.4vw;
 
                         h2 {
                             @include titleFont;
@@ -119,27 +124,32 @@ body {
                         }
 
                         ul {
+                            width: 10vw;
+                            height: 100%;
+                            margin: auto;
                             list-style: none;
-                            margin-top: 20px;
+                            margin-top: 2vh;
 
                             .icon {
-                                width: 60%;
-                                height: 7vw;
-                                margin: auto;
+                                width: 8vw;
+                                height: 40%;
+                                margin: 0 auto;
                                 background-image: url(./assets/img/sunny.png);
-                                background-size: cover;
-                                background-position: center;
+                                @include backgoundSet();
                             }
 
                             .temperature {
                                 text-align: center;
                                 font-size: 2.2vw;
+                                font-weight: bold;
+                                text-shadow: 7px 7px 20px #1C1B20;
+                                margin-top: -2vw;
                             }
 
                             .weather-info {
-                                margin-top: 0.7vw;
+                                margin-top: 2vw;
                                 width: 100%;
-                                height: 5.5vw;
+                                height: 5.5vh;
                                 display: flex;
                                 justify-content: space-between;
                                 text-align: center;
@@ -152,39 +162,31 @@ body {
                                     }
 
                                     .windIcon {
-                                        width: 40px;
+                                        width: 4vh;
                                         height: 2vw;
                                         display: block;
-
                                         margin: auto;
                                         background-image: url(./assets/img/Wind.png);
-                                        background-size: contain;
-                                        background-repeat: no-repeat;
-                                        background-position: center;
+                                        @include backgoundSet();
                                     }
 
                                     .humidityIcon {
-                                        width: 40px;
+                                        width: 4vh;
                                         height: 2vw;
                                         display: block;
                                         margin: auto;
                                         background-image: url(./assets/img/Dew.png);
-                                        background-size: contain;
-                                        background-repeat: no-repeat;
-                                        background-position: center;
+                                        @include backgoundSet();
 
                                     }
 
                                     .VisibilityIcon {
-                                        width: 40px;
+                                        width: 4vh;
                                         height: 2vw;
                                         display: block;
-
                                         margin: auto;
                                         background-image: url(./assets/img/Rain2.png);
-                                        background-size: contain;
-                                        background-repeat: no-repeat;
-                                        background-position: center;
+                                        @include backgoundSet();
 
                                     }
                                 }
@@ -193,25 +195,68 @@ body {
 
                         }
                     }
-
-
                 }
 
-                .a1 {
+                .perceived {
                     width: 100%;
                     height: 30%;
                     margin: 0 auto;
-                    background-color: #fff;
                     border-radius: 20px;
-                    @include objcolor();
+                    background-color: #fff;
+                    background: linear-gradient(#ccc8bd, #ffab04, #ff8604);
+                    box-sizing: border-box;
+                    padding: 2vw;
 
+                    .thermometerIconbox {
+                        display: flex;
+                        width: 100%;
+                        height: 12vh;
+
+                        .thermometerIcon {
+                            width: 5vw;
+                            height: 10vh;
+                            background-image: url(./assets/img/ThermometerQuarter.png);
+                            @include backgoundSet();
+                        }
+
+                        div {
+                            text-align: center;
+                            font-size: 1vw;
+                            font-weight: bold;
+
+                            p {
+                                margin-top: 1vw;
+                                font-size: 1.1vw;
+                                font-weight: bold;
+                            }
+                        }
+
+                    }
+
+                    .suggestion {
+                        text-align: center;
+
+                        .suggestionT {
+                            font-size: 1vw;
+                            font-weight: bold;
+                            margin-top: -0.5vh;
+                            margin-bottom: 1vh;
+
+                        }
+
+                        .suggestionM {
+                            font-size: 0.7vw;
+                        }
+
+
+                    }
 
                 }
             }
 
             .secondSection {
                 width: 40%;
-                height: 95%;
+                height: 44vw;
                 display: flex;
                 flex-wrap: wrap;
                 align-items: center;
@@ -223,10 +268,18 @@ body {
                     @include objcolor();
                     background-color: #1C1B20;
                     overflow: hidden;
+                    position: relative;
                     // background: linear-gradient(#bdc5cc, #0185f8);
 
                     opacity: 90%;
 
+                    .mapSelect {
+                        position: absolute;
+                        text-align: center;
+                        width: 84px;
+                        height: 20px;
+                        border-radius: 30px;
+                    }
 
                     .map {
                         width: 25vw;
@@ -260,7 +313,7 @@ body {
 
             .thirdSection {
                 width: 45%;
-                height: 95%;
+                height: 44vw;
                 // background-color: #3f1d1d;
                 display: flex;
                 flex-wrap: wrap;
@@ -322,11 +375,22 @@ body {
                     @include objcolor();
                     padding: 30px;
                     box-sizing: border-box;
+                    position: relative;
+
+                    p {
+                        font-size: 1vw;
+                        position: absolute;
+                        top: 1.2vw;
+
+                    }
 
                     .canvas {
+                        position: absolute;
+                        top: 2vw;
                         border-radius: 20px;
                         margin: auto;
                         display: block;
+                        width: 35vw;
                     }
 
 
@@ -344,132 +408,7 @@ body {
     }
 }
 
-@media (max-width:1280px) {
-    body {
-        margin: 0 auto;
-        width: 100vw;
-        display: block;
-        background-color: #fff;
-        background-image: url();
-        background-repeat: no-repeat;
-        background-size: cover;
 
-        .container {
-            margin: 0 auto;
-            height: 100vh;
-            width: 90vw;
-
-            .header {
-                width: 100%;
-                height: 60px;
-                background-color: #fff;
-                @include objcolor();
-
-                p {
-                    font-size: 25px;
-                    font-style: bold;
-                    line-height: 60px;
-                    margin-left: 50px;
-                }
-            }
-
-            .main {
-                width: 100%;
-                height: calc(100% - 60px);
-                display: flex;
-
-                .firstSection {
-                    width: 20%;
-                    height: 100%;
-                    display: flex;
-                    flex-wrap: wrap;
-                    align-items: center;
-
-                    .a1 {
-                        width: 100%;
-                        height: 30%;
-                        margin: 0 auto;
-                        background-color: #fff;
-                        border-radius: 20px;
-                        @include objcolor();
-                    }
-
-                    .a {
-                        width: 100%;
-                        height: 30%;
-                        margin: 0 auto;
-                        background-color: #fff;
-                        border-radius: 20px;
-                        @include objcolor();
-
-
-                    }
-                }
-
-                .secondSection {
-                    width: 40%;
-                    height: 100%;
-                    display: flex;
-                    flex-wrap: wrap;
-                    align-items: center;
-
-                    .b1 {
-                        width: 90%;
-                        height: 63%;
-                        margin: 0 auto;
-                        @include objcolor()
-                    }
-
-                    .b2 {
-                        width: 90%;
-                        margin: 0 auto;
-
-                        @include objcolor();
-                        height: 30%;
-
-                    }
-                }
-
-                .thirdSection {
-                    width: 45%;
-                    height: 100%;
-                    // background-color: #3f1d1d;
-                    display: flex;
-                    flex-wrap: wrap;
-                    align-items: center;
-
-                    .c {
-                        width: 100%;
-                        height: 20%;
-                        // background-color: #fff;
-                        display: flex;
-                        justify-content: space-between;
-
-                        .c2-1 {
-                            width: 32%;
-                            background-color: black;
-                            @include objcolor();
-                        }
-                    }
-
-                    .c1 {
-                        width: 100%;
-                        height: 40%;
-                        @include objcolor();
-
-                    }
-
-                    .c2 {
-                        width: 100%;
-                        height: 30%;
-                        @include objcolor();
-
-                    }
-                }
-            }
-        }
-    }
-}
 
 @media (max-width:720px) {
     .container {
